--- a/XF_AppCompat/Droid/Properties/AndroidManifest.xml
+++ b/XF_AppCompat/Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.simpleprodinc.xf_appcompat">
-	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="XF_AppCompat">
+	<uses-sdk android:minSdkVersion="15" android:targetSdkVersion="23" />
+	<application android:label="XF_AppCompat" android:theme="@style/MyTheme">
 	</application>
 </manifest>
